vendor/mir/include/mir.h

#define MIR_NO_IO 0
typedef enum MIR_error_type {
  REP8 (ERR_EL, no, syntax, binary_io, alloc, finish, no_module, nested_module, no_func),
  REP5 (ERR_EL, func, vararg_func, nested_func, wrong_param_value, hard_reg),
  REP5 (ERR_EL, reserved_name, import_export, undeclared_func_reg, repeated_decl, reg_type),
  REP6 (ERR_EL, wrong_type, unique_reg, undeclared_op_ref, ops_num, call_op, unspec_op),
  REP6 (ERR_EL, wrong_lref, ret, op_mode, out_op, invalid_insn, ctx_change)
} MIR_error_type_t;
typedef void MIR_NO_RETURN (*MIR_error_func_t) (MIR_error_type_t error_type, const char *format,
                                                ...);
typedef enum {
  REP4 (INSN_EL, MOV, FMOV, DMOV, LDMOV), 
  REP6 (INSN_EL, EXT8, EXT16, EXT32, UEXT8, UEXT16, UEXT32),
  REP3 (INSN_EL, I2F, I2D, I2LD),    
  REP3 (INSN_EL, UI2F, UI2D, UI2LD), 
  REP3 (INSN_EL, F2I, D2I, LD2I),    
  REP6 (INSN_EL, F2D, F2LD, D2F, D2LD, LD2F, LD2D), 
  REP5 (INSN_EL, NEG, NEGS, FNEG, DNEG, LDNEG),     
  REP4 (INSN_EL, ADDR, ADDR8, ADDR16, ADDR32), 
  REP5 (INSN_EL, ADD, ADDS, FADD, DADD, LDADD),              
  REP5 (INSN_EL, SUB, SUBS, FSUB, DSUB, LDSUB),              
  REP5 (INSN_EL, MUL, MULS, FMUL, DMUL, LDMUL),              
  REP7 (INSN_EL, DIV, DIVS, UDIV, UDIVS, FDIV, DDIV, LDDIV), 
  REP4 (INSN_EL, MOD, MODS, UMOD, UMODS),                    
  REP6 (INSN_EL, AND, ANDS, OR, ORS, XOR, XORS),             
  REP6 (INSN_EL, LSH, LSHS, RSH, RSHS, URSH, URSHS),         
  REP5 (INSN_EL, EQ, EQS, FEQ, DEQ, LDEQ),                   
  REP5 (INSN_EL, NE, NES, FNE, DNE, LDNE),                   
  REP7 (INSN_EL, LT, LTS, ULT, ULTS, FLT, DLT, LDLT),        
  REP7 (INSN_EL, LE, LES, ULE, ULES, FLE, DLE, LDLE),        
  REP7 (INSN_EL, GT, GTS, UGT, UGTS, FGT, DGT, LDGT),        
  REP7 (INSN_EL, GE, GES, UGE, UGES, FGE, DGE, LDGE),        
  REP8 (INSN_EL, ADDO, ADDOS, SUBO, SUBOS, MULO, MULOS, UMULO, UMULOS), 
  REP5 (INSN_EL, JMP, BT, BTS, BF, BFS),
  REP5 (INSN_EL, BEQ, BEQS, FBEQ, DBEQ, LDBEQ),
  REP5 (INSN_EL, BNE, BNES, FBNE, DBNE, LDBNE),
  REP7 (INSN_EL, BLT, BLTS, UBLT, UBLTS, FBLT, DBLT, LDBLT),
  REP7 (INSN_EL, BLE, BLES, UBLE, UBLES, FBLE, DBLE, LDBLE),
  REP7 (INSN_EL, BGT, BGTS, UBGT, UBGTS, FBGT, DBGT, LDBGT),
  REP7 (INSN_EL, BGE, BGES, UBGE, UBGES, FBGE, DBGE, LDBGE),
  REP2 (INSN_EL, BO, UBO),   
  REP2 (INSN_EL, BNO, UBNO), 
  INSN_EL (LADDR),           
  INSN_EL (JMPI),            
  REP3 (INSN_EL, CALL, INLINE, JCALL),
  INSN_EL (SWITCH),
  INSN_EL (RET),
  INSN_EL (JRET), 
  INSN_EL (ALLOCA),             
  REP2 (INSN_EL, BSTART, BEND), 
  INSN_EL (VA_ARG),       
  INSN_EL (VA_BLOCK_ARG), 
  INSN_EL (VA_START),
  INSN_EL (VA_END),                    
  INSN_EL (LABEL),                     
  INSN_EL (UNSPEC),                    
  REP3 (INSN_EL, PRSET, PRBEQ, PRBNE), 
  INSN_EL (USE), 
  INSN_EL (PHI), 
  INSN_EL (INVALID_INSN),
  INSN_EL (INSN_BOUND), 
} MIR_insn_code_t;
typedef enum {
  REP8 (TYPE_EL, I8, U8, I16, U16, I32, U32, I64, U64), 
  REP3 (TYPE_EL, F, D, LD),                             
  REP2 (TYPE_EL, P, BLK),                               
  TYPE_EL (RBLK) = TYPE_EL (BLK) + MIR_BLK_NUM,         
  REP2 (TYPE_EL, UNDEF, BOUND),
} MIR_type_t;
typedef uint8_t MIR_scale_t; 
typedef int64_t MIR_disp_t; 
typedef uint32_t MIR_reg_t;
typedef uint32_t MIR_alias_t; 
typedef struct {
  MIR_type_t type : 8;
  MIR_scale_t scale;
  MIR_alias_t alias;    
  MIR_alias_t nonalias; 
  uint32_t nloc;
  MIR_reg_t base, index;
  MIR_disp_t disp;
} MIR_mem_t;
typedef struct MIR_insn *MIR_label_t;
typedef enum {
  REP8 (OP_EL, UNDEF, REG, VAR, INT, UINT, FLOAT, DOUBLE, LDOUBLE),
  REP6 (OP_EL, REF, STR, MEM, VAR_MEM, LABEL, BOUND),
} MIR_op_mode_t;
typedef struct MIR_item *MIR_item_t;
struct MIR_str {
  size_t len;
  const char *s;
};
typedef struct MIR_str MIR_str_t;
typedef struct {
  void *data; 
  MIR_op_mode_t mode : 8;
  MIR_op_mode_t value_mode : 8;
  union {
    MIR_reg_t reg;
    MIR_reg_t var; 
    int64_t i;
    uint64_t u;
    float f;
    double d;
    long double ld;
    MIR_item_t ref; 
    MIR_str_t str;
    MIR_mem_t mem;
    MIR_mem_t var_mem; 
    MIR_label_t label;
  } u;
} MIR_op_t;
typedef struct MIR_insn *MIR_insn_t;
struct MIR_insn {
  void *data; 
  DLIST_LINK (MIR_insn_t) insn_link;
  MIR_insn_code_t code : 32;
  unsigned int nops : 32; 
  MIR_op_t ops[1];
};
typedef struct MIR_var {
  MIR_type_t type; 
  const char *name;
  size_t size; 
} MIR_var_t;
typedef struct MIR_func {
  const char *name;
  MIR_item_t func_item;
  size_t original_vars_num;
  DLIST (MIR_insn_t) insns, original_insns;
  uint32_t nres, nargs, last_temp_num, n_inlines;
  MIR_type_t *res_types;
  char vararg_p;                  
  char expr_p;                    
  char jret_p;                    
  VARR (MIR_var_t) * vars;        
  VARR (MIR_var_t) * global_vars; 
  void *machine_code;             
  void *call_addr; 
  void *internal;  
  struct MIR_lref_data *first_lref; 
} *MIR_func_t;
typedef struct MIR_lref_data { 
  const char *name;            
  MIR_label_t label;           
  MIR_label_t label2;          
  MIR_label_t orig_label, orig_label2; 
  int64_t disp;                        
  void *load_addr;                     
  struct MIR_lref_data *next;          
} *MIR_lref_data_t;
typedef struct MIR_module *MIR_module_t;
typedef enum {
  REP8 (ITEM_EL, func, proto, import, export, forward, data, ref_data, lref_data),
  REP2 (ITEM_EL, expr_data, bss),
} MIR_item_type_t;
struct MIR_item {
  void *data;
  MIR_module_t module;
  DLIST_LINK (MIR_item_t) item_link;
  MIR_item_type_t item_type; 
  MIR_item_t ref_def;
  void *addr;
  char export_p; 
  char section_head_p;
  union {
    MIR_func_t func;
    MIR_proto_t proto;
    MIR_name_t import_id;
    MIR_name_t export_id;
    MIR_name_t forward_id;
    MIR_data_t data;
    MIR_ref_data_t ref_data;
    MIR_lref_data_t lref_data;
    MIR_expr_data_t expr_data;
    MIR_bss_t bss;
  } u;
};
struct MIR_module {
  void *data;
  const char *name;
  DLIST (MIR_item_t) items; 
  DLIST_LINK (MIR_module_t) module_link;
  uint32_t last_temp_item_num; 
};
struct MIR_context;
typedef struct MIR_context *MIR_context_t;
static inline int MIR_FP_branch_code_p (MIR_insn_code_t code) {
  return (code == MIR_FBEQ || code == MIR_DBEQ || code == MIR_LDBEQ || code == MIR_FBNE
          || code == MIR_DBNE || code == MIR_LDBNE || code == MIR_FBLT || code == MIR_DBLT
          || code == MIR_LDBLT || code == MIR_FBLE || code == MIR_DBLE || code == MIR_LDBLE
          || code == MIR_FBGT || code == MIR_DBGT || code == MIR_LDBGT || code == MIR_FBGE
          || code == MIR_DBGE || code == MIR_LDBGE);
}
static inline int MIR_call_code_p (MIR_insn_code_t code) {
  return code == MIR_CALL || code == MIR_INLINE || code == MIR_JCALL;
}
static inline int MIR_int_branch_code_p (MIR_insn_code_t code) {
  return (code == MIR_BT || code == MIR_BTS || code == MIR_BF || code == MIR_BFS || code == MIR_BEQ
          || code == MIR_BEQS || code == MIR_BNE || code == MIR_BNES || code == MIR_BLT
          || code == MIR_BLTS || code == MIR_UBLT || code == MIR_UBLTS || code == MIR_BLE
          || code == MIR_BLES || code == MIR_UBLE || code == MIR_UBLES || code == MIR_BGT
          || code == MIR_BGTS || code == MIR_UBGT || code == MIR_UBGTS || code == MIR_BGE
          || code == MIR_BGES || code == MIR_UBGE || code == MIR_UBGES || code == MIR_BO
          || code == MIR_UBO || code == MIR_BNO || code == MIR_UBNO);
}
static inline int MIR_branch_code_p (MIR_insn_code_t code) {
  return (code == MIR_JMP || MIR_int_branch_code_p (code) || MIR_FP_branch_code_p (code));
}
extern MIR_item_t MIR_new_import (MIR_context_t ctx, const char *name);
extern MIR_item_t MIR_new_export (MIR_context_t ctx, const char *name);
extern MIR_item_t MIR_new_forward (MIR_context_t ctx, const char *name);
extern MIR_item_t MIR_new_bss (MIR_context_t ctx, const char *name,
                               size_t len); 
extern MIR_item_t MIR_new_data (MIR_context_t ctx, const char *name, MIR_type_t el_type, size_t nel,
                                const void *els); 
extern MIR_item_t MIR_new_string_data (MIR_context_t ctx, const char *name,
                                       MIR_str_t str); 
extern MIR_item_t MIR_new_ref_data (MIR_context_t ctx, const char *name, MIR_item_t item,
                                    int64_t disp); 
extern MIR_item_t MIR_new_lref_data (MIR_context_t ctx, const char *name, MIR_label_t label,
                                     MIR_label_t label2,
                                     int64_t disp); 
extern MIR_item_t MIR_new_expr_data (MIR_context_t ctx, const char *name,
                                     MIR_item_t expr_item); 
extern MIR_item_t MIR_new_proto_arr (MIR_context_t ctx, const char *name, size_t nres,
                                     MIR_type_t *res_types, size_t nargs, MIR_var_t *vars);
extern MIR_item_t MIR_new_proto (MIR_context_t ctx, const char *name, size_t nres,
                                 MIR_type_t *res_types, size_t nargs, ...);
extern MIR_item_t MIR_new_vararg_proto_arr (MIR_context_t ctx, const char *name, size_t nres,
                                            MIR_type_t *res_types, size_t nargs, MIR_var_t *vars);
extern MIR_item_t MIR_new_vararg_proto (MIR_context_t ctx, const char *name, size_t nres,
                                        MIR_type_t *res_types, size_t nargs, ...);
extern MIR_item_t MIR_new_func_arr (MIR_context_t ctx, const char *name, size_t nres,
                                    MIR_type_t *res_types, size_t nargs, MIR_var_t *vars);
extern MIR_item_t MIR_new_func (MIR_context_t ctx, const char *name, size_t nres,
                                MIR_type_t *res_types, size_t nargs, ...);
extern MIR_item_t MIR_new_vararg_func_arr (MIR_context_t ctx, const char *name, size_t nres,
                                           MIR_type_t *res_types, size_t nargs, MIR_var_t *vars);
extern MIR_item_t MIR_new_vararg_func (MIR_context_t ctx, const char *name, size_t nres,
                                       MIR_type_t *res_types, size_t nargs, ...);
extern const char *MIR_item_name (MIR_context_t ctx, MIR_item_t item);
extern MIR_func_t MIR_get_item_func (MIR_context_t ctx, MIR_item_t item);
extern MIR_reg_t MIR_new_func_reg (MIR_context_t ctx, MIR_func_t func, MIR_type_t type,
                                   const char *name);
extern MIR_reg_t MIR_new_global_func_reg (MIR_context_t ctx, MIR_func_t func, MIR_type_t type,
                                          const char *name, const char *hard_reg_name);
extern void MIR_finish_func (MIR_context_t ctx);
extern MIR_error_func_t MIR_get_error_func (MIR_context_t ctx);
extern void MIR_set_error_func (MIR_context_t ctx, MIR_error_func_t func);
extern MIR_alloc_t MIR_get_alloc (MIR_context_t ctx);
extern int MIR_get_func_redef_permission_p (MIR_context_t ctx);
extern void MIR_set_func_redef_permission (MIR_context_t ctx, int flag_p);
extern MIR_insn_t MIR_new_insn_arr (MIR_context_t ctx, MIR_insn_code_t code, size_t nops,
                                    MIR_op_t *ops);
extern MIR_insn_t MIR_new_insn (MIR_context_t ctx, MIR_insn_code_t code, ...);
extern MIR_insn_t MIR_new_call_insn (MIR_context_t ctx, size_t nops, ...);
extern MIR_insn_t MIR_new_jcall_insn (MIR_context_t ctx, size_t nops, ...);
extern MIR_insn_t MIR_new_ret_insn (MIR_context_t ctx, size_t nops, ...);
extern MIR_insn_t MIR_copy_insn (MIR_context_t ctx, MIR_insn_t insn);
extern const char *MIR_insn_name (MIR_context_t ctx, MIR_insn_code_t code);
extern size_t MIR_insn_nops (MIR_context_t ctx, MIR_insn_t insn);
extern MIR_op_mode_t MIR_insn_op_mode (MIR_context_t ctx, MIR_insn_t insn, size_t nop, int *out_p);
extern MIR_insn_t MIR_new_label (MIR_context_t ctx);
extern MIR_reg_t MIR_reg (MIR_context_t ctx, const char *reg_name, MIR_func_t func);
extern MIR_type_t MIR_reg_type (MIR_context_t ctx, MIR_reg_t reg, MIR_func_t func);
extern const char *MIR_reg_name (MIR_context_t ctx, MIR_reg_t reg, MIR_func_t func);
extern const char *MIR_reg_hard_reg_name (MIR_context_t ctx, MIR_reg_t reg, MIR_func_t func);
extern const char *MIR_alias_name (MIR_context_t ctx, MIR_alias_t alias);
extern MIR_alias_t MIR_alias (MIR_context_t ctx, const char *name);
extern MIR_op_t MIR_new_reg_op (MIR_context_t ctx, MIR_reg_t reg);
extern MIR_op_t MIR_new_int_op (MIR_context_t ctx, int64_t v);
extern MIR_op_t MIR_new_uint_op (MIR_context_t ctx, uint64_t v);
extern MIR_op_t MIR_new_float_op (MIR_context_t ctx, float v);
extern MIR_op_t MIR_new_double_op (MIR_context_t ctx, double v);
extern MIR_op_t MIR_new_ldouble_op (MIR_context_t ctx, long double v);
extern MIR_op_t MIR_new_ref_op (MIR_context_t ctx, MIR_item_t item);
extern MIR_op_t MIR_new_str_op (MIR_context_t ctx, MIR_str_t str);
extern MIR_op_t MIR_new_mem_op (MIR_context_t ctx, MIR_type_t type, MIR_disp_t disp, MIR_reg_t base,
                                MIR_reg_t index, MIR_scale_t scale);
extern MIR_op_t MIR_new_alias_mem_op (MIR_context_t ctx, MIR_type_t type, MIR_disp_t disp,
                                      MIR_reg_t base, MIR_reg_t index, MIR_scale_t scale,
                                      MIR_alias_t alias, MIR_alias_t noalias);
extern MIR_op_t MIR_new_label_op (MIR_context_t ctx, MIR_label_t label);
extern int MIR_op_eq_p (MIR_context_t ctx, MIR_op_t op1, MIR_op_t op2);
extern void MIR_append_insn (MIR_context_t ctx, MIR_item_t func, MIR_insn_t insn);
extern void MIR_prepend_insn (MIR_context_t ctx, MIR_item_t func, MIR_insn_t insn);
extern void MIR_insert_insn_after (MIR_context_t ctx, MIR_item_t func, MIR_insn_t after,
                                   MIR_insn_t insn);
extern void MIR_insert_insn_before (MIR_context_t ctx, MIR_item_t func, MIR_insn_t before,
                                    MIR_insn_t insn);
extern void MIR_remove_insn (MIR_context_t ctx, MIR_item_t func, MIR_insn_t insn);
extern MIR_insn_code_t MIR_reverse_branch_code (MIR_insn_code_t code);
extern const char *MIR_type_str (MIR_context_t ctx, MIR_type_t tp);
extern void MIR_output_op (MIR_context_t ctx, FILE *f, MIR_op_t op, MIR_func_t func);
extern void MIR_output_insn (MIR_context_t ctx, FILE *f, MIR_insn_t insn, MIR_func_t func,
                             int newline_p);
extern void MIR_output_item (MIR_context_t ctx, FILE *f, MIR_item_t item);
extern void MIR_output_module (MIR_context_t ctx, FILE *f, MIR_module_t module);
extern void MIR_output (MIR_context_t ctx, FILE *f);
extern void MIR_write (MIR_context_t ctx, FILE *f);
extern void MIR_write_module (MIR_context_t ctx, FILE *f, MIR_module_t module);
extern void MIR_read (MIR_context_t ctx, FILE *f);
extern void MIR_write_with_func (MIR_context_t ctx,
                                 int (*const writer_func) (MIR_context_t, uint8_t));
extern void MIR_write_module_with_func (MIR_context_t ctx,
                                        int (*const writer_func) (MIR_context_t, uint8_t),
                                        MIR_module_t module);
extern void MIR_read_with_func (MIR_context_t ctx, int (*const reader_func) (MIR_context_t));
extern void MIR_scan_string (MIR_context_t ctx, const char *str);
extern void MIR_link (MIR_context_t ctx, void (*set_interface) (MIR_context_t ctx, MIR_item_t item),
                      void *(*import_resolver) (const char *) );
typedef union {
  MIR_insn_code_t ic;
  void *a;
  int64_t i;
  uint64_t u;
  float f;
  double d;
  long double ld;
} MIR_val_t;
extern void MIR_interp (MIR_context_t ctx, MIR_item_t func_item, MIR_val_t *results, size_t nargs,
                        ...);
extern void MIR_interp_arr (MIR_context_t ctx, MIR_item_t func_item, MIR_val_t *results,
                            size_t nargs, MIR_val_t *vals);
extern void MIR_set_interp_interface (MIR_context_t ctx, MIR_item_t func_item);