src/backend/jit/mir.d


// Itens de módulo
MIR_item_t MIR_new_import(MIR_context_t ctx, const(char)* name);
MIR_item_t MIR_new_export(MIR_context_t ctx, const(char)* name);
MIR_item_t MIR_new_forward(MIR_context_t ctx, const(char)* name);
MIR_item_t MIR_new_bss(MIR_context_t ctx, const(char)* name, size_t len);
MIR_item_t MIR_new_data(MIR_context_t ctx, const(char)* name,
    MIR_type_t el_type, size_t nel, const void* els);
MIR_item_t MIR_new_string_data(MIR_context_t ctx, const(char)* name, MIR_str_t str);
MIR_item_t MIR_new_ref_data(MIR_context_t ctx, const(char)* name,
    MIR_item_t item, long disp);
MIR_item_t MIR_new_lref_data(MIR_context_t ctx, const(char)* name,
    MIR_label_t label, MIR_label_t label2, long disp);
MIR_item_t MIR_new_expr_data(MIR_context_t ctx, const(char)* name, MIR_item_t expr_item);

// Protótipos
MIR_item_t MIR_new_proto_arr(MIR_context_t ctx, const(char)* name,
    size_t nres, MIR_type_t* res_types,
    size_t nargs, MIR_var_t* vars);
MIR_item_t MIR_new_proto(MIR_context_t ctx, const(char)* name,
    size_t nres, MIR_type_t* res_types, size_t nargs, ...);
MIR_item_t MIR_new_vararg_proto_arr(MIR_context_t ctx, const(char)* name,
    size_t nres, MIR_type_t* res_types,
    size_t nargs, MIR_var_t* vars);
MIR_item_t MIR_new_vararg_proto(MIR_context_t ctx, const(char)* name,
    size_t nres, MIR_type_t* res_types, size_t nargs, ...);

// Funções
MIR_item_t MIR_new_func_arr(MIR_context_t ctx, const(char)* name,
    size_t nres, MIR_type_t* res_types,
    size_t nargs, MIR_var_t* vars);
MIR_item_t MIR_new_func(MIR_context_t ctx, const(char)* name,
    size_t nres, MIR_type_t* res_types, size_t nargs, ...);
MIR_item_t MIR_new_vararg_func_arr(MIR_context_t ctx, const(char)* name,
    size_t nres, MIR_type_t* res_types,
    size_t nargs, MIR_var_t* vars);
MIR_item_t MIR_new_vararg_func(MIR_context_t ctx, const(char)* name,
    size_t nres, MIR_type_t* res_types, size_t nargs, ...);
void MIR_finish_func(MIR_context_t ctx);
const(char)* MIR_item_name(MIR_context_t ctx, MIR_item_t item);

// Registradores
MIR_reg_t MIR_new_func_reg(MIR_context_t ctx, void* func, MIR_type_t type, const(char)* name);
MIR_reg_t MIR_new_global_func_reg(MIR_context_t ctx, void* func, MIR_type_t type,
    const(char)* name, const(char)* hard_reg_name);
MIR_reg_t MIR_reg(MIR_context_t ctx, const(char)* reg_name, void* func);
MIR_type_t MIR_reg_type(MIR_context_t ctx, MIR_reg_t reg, void* func);
const(char)* MIR_reg_name(MIR_context_t ctx, MIR_reg_t reg, void* func);
const(char)* MIR_reg_hard_reg_name(MIR_context_t ctx, MIR_reg_t reg, void* func);

// Alias de memória
const(char)* MIR_alias_name(MIR_context_t ctx, MIR_alias_t alias_);
MIR_alias_t MIR_alias(MIR_context_t ctx, const(char)* name);

// Construção de operandos
MIR_op_t MIR_new_reg_op(MIR_context_t ctx, MIR_reg_t reg);
MIR_op_t MIR_new_int_op(MIR_context_t ctx, long v);
MIR_op_t MIR_new_uint_op(MIR_context_t ctx, ulong v);
MIR_op_t MIR_new_float_op(MIR_context_t ctx, float v);
MIR_op_t MIR_new_double_op(MIR_context_t ctx, double v);
MIR_op_t MIR_new_ldouble_op(MIR_context_t ctx, real v);
MIR_op_t MIR_new_ref_op(MIR_context_t ctx, MIR_item_t item);
MIR_op_t MIR_new_str_op(MIR_context_t ctx, MIR_str_t str);
MIR_op_t MIR_new_mem_op(MIR_context_t ctx, MIR_type_t type, MIR_disp_t disp,
    MIR_reg_t base, MIR_reg_t index, MIR_scale_t scale);
MIR_op_t MIR_new_alias_mem_op(MIR_context_t ctx, MIR_type_t type, MIR_disp_t disp,
    MIR_reg_t base, MIR_reg_t index, MIR_scale_t scale,
    MIR_alias_t alias_, MIR_alias_t noalias);
MIR_op_t MIR_new_label_op(MIR_context_t ctx, MIR_label_t label);
int MIR_op_eq_p(MIR_context_t ctx, MIR_op_t op1, MIR_op_t op2);

// Instruções
MIR_insn_t MIR_new_insn_arr(MIR_context_t ctx, MIR_insn_code_t code,
    size_t nops, MIR_op_t* ops);
MIR_insn_t MIR_new_insn(MIR_context_t ctx, MIR_insn_code_t code, ...);
MIR_insn_t MIR_new_call_insn(MIR_context_t ctx, size_t nops, ...);
MIR_insn_t MIR_new_jcall_insn(MIR_context_t ctx, size_t nops, ...);
MIR_insn_t MIR_new_ret_insn(MIR_context_t ctx, size_t nops, ...);
MIR_insn_t MIR_copy_insn(MIR_context_t ctx, MIR_insn_t insn);
MIR_insn_t MIR_new_label(MIR_context_t ctx);
const(char)* MIR_insn_name(MIR_context_t ctx, MIR_insn_code_t code);
size_t MIR_insn_nops(MIR_context_t ctx, MIR_insn_t insn);
MIR_op_mode_t MIR_insn_op_mode(MIR_context_t ctx, MIR_insn_t insn, size_t nop, int* out_p);
MIR_insn_code_t MIR_reverse_branch_code(MIR_insn_code_t code);

// Inserção/remoção de instruções
void MIR_append_insn(MIR_context_t ctx, MIR_item_t func, MIR_insn_t insn);
void MIR_prepend_insn(MIR_context_t ctx, MIR_item_t func, MIR_insn_t insn);
void MIR_insert_insn_after(MIR_context_t ctx, MIR_item_t func,
    MIR_insn_t after, MIR_insn_t insn);
void MIR_insert_insn_before(MIR_context_t ctx, MIR_item_t func,
    MIR_insn_t before, MIR_insn_t insn);
void MIR_remove_insn(MIR_context_t ctx, MIR_item_t func, MIR_insn_t insn);

// Output / debug
const(char)* MIR_type_str(MIR_context_t ctx, MIR_type_t tp);
void MIR_output_op(MIR_context_t ctx, void* f, MIR_op_t op, void* func);
void MIR_output_insn(MIR_context_t ctx, void* f, MIR_insn_t insn,
    void* func, int newline_p);
void MIR_output_item(MIR_context_t ctx, void* f, MIR_item_t item);
void MIR_output_module(MIR_context_t ctx, void* f, MIR_module_t module_);
void MIR_output(MIR_context_t ctx, void* f);

// I/O binário (disponível quando MIR_NO_IO == 0)
void MIR_write(MIR_context_t ctx, void* f);
void MIR_write_module(MIR_context_t ctx, void* f, MIR_module_t module_);
void MIR_read(MIR_context_t ctx, void* f);

// Scan de texto MIR
void MIR_scan_string(MIR_context_t ctx, const(char)* str);

// Erro
MIR_error_func_t MIR_get_error_func(MIR_context_t ctx);
void MIR_set_error_func(MIR_context_t ctx, MIR_error_func_t func);
MIR_alloc_t MIR_get_alloc(MIR_context_t ctx);
int MIR_get_func_redef_permission_p(MIR_context_t ctx);
void MIR_set_func_redef_permission(MIR_context_t ctx, int flag_p);

// =============================================================================
// Intérprete
// =============================================================================

void MIR_interp(MIR_context_t ctx, MIR_item_t func_item,
    MIR_val_t* results, size_t nargs, ...);
void MIR_interp_arr(MIR_context_t ctx, MIR_item_t func_item,
    MIR_val_t* results, size_t nargs, MIR_val_t* vals);
void MIR_set_interp_interface(MIR_context_t ctx, MIR_item_t func_item);

// =============================================================================
// mir-gen.h  (geração de código nativo / JIT)
// =============================================================================

void MIR_gen_init(MIR_context_t ctx);
void MIR_gen_set_debug_file(MIR_context_t ctx, void* f);      // sem gen_num
void MIR_gen_set_debug_level(MIR_context_t ctx, int debug_level); // sem gen_num
void MIR_gen_set_optimize_level(MIR_context_t ctx, uint level);
void* MIR_gen(MIR_context_t ctx, MIR_item_t func_item);       // sem gen_num
void MIR_gen_finish(MIR_context_t ctx);
void MIR_set_gen_interface(MIR_context_t ctx, MIR_item_t func_item);
void MIR_set_parallel_gen_interface(MIR_context_t ctx, MIR_item_t func_item);
void MIR_set_lazy_gen_interface(MIR_context_t ctx, MIR_item_t func_item);

// =============================================================================
// Helpers inline para predicados de instrução
// =============================================================================

bool MIR_call_code_p(MIR_insn_code_t code) pure
{
    return code == MIR_insn_code_t.MIR_CALL
        || code == MIR_insn_code_t.MIR_INLINE
        || code == MIR_insn_code_t.MIR_JCALL;
}

bool MIR_branch_code_p(MIR_insn_code_t code) pure
{
    return code == MIR_insn_code_t.MIR_JMP
        || MIR_int_branch_code_p(code)
        || MIR_FP_branch_code_p(code);
}

bool MIR_int_branch_code_p(MIR_insn_code_t code) pure
{
    with (MIR_insn_code_t)
        return code == MIR_BT || code == MIR_BTS || code == MIR_BF || code == MIR_BFS
            || code == MIR_BEQ || code == MIR_BEQS || code == MIR_BNE || code == MIR_BNES
            || code == MIR_BLT || code == MIR_BLTS || code == MIR_UBLT || code == MIR_UBLTS
            || code == MIR_BLE || code == MIR_BLES || code == MIR_UBLE || code == MIR_UBLES
            || code == MIR_BGT || code == MIR_BGTS || code == MIR_UBGT || code == MIR_UBGTS
            || code == MIR_BGE || code == MIR_BGES || code == MIR_UBGE || code == MIR_UBGES
            || code == MIR_BO || code == MIR_UBO || code == MIR_BNO || code == MIR_UBNO;
}

bool MIR_FP_branch_code_p(MIR_insn_code_t code) pure
{
    with (MIR_insn_code_t)
        return code == MIR_FBEQ || code == MIR_DBEQ || code == MIR_LDBEQ
            || code == MIR_FBNE || code == MIR_DBNE || code == MIR_LDBNE
            || code == MIR_FBLT || code == MIR_DBLT || code == MIR_LDBLT
            || code == MIR_FBLE || code == MIR_DBLE || code == MIR_LDBLE
            || code == MIR_FBGT || code == MIR_DBGT || code == MIR_LDBGT
            || code == MIR_FBGE || code == MIR_DBGE || code == MIR_LDBGE;
}

struct MIR_func_desc;
alias MIR_func_t = MIR_func_desc*;

// Corrige as assinaturas que estavam com void*
MIR_func_t MIR_get_item_func(MIR_context_t ctx, MIR_item_t item);
MIR_reg_t  MIR_new_func_reg(MIR_context_t ctx, MIR_func_t func, MIR_type_t type, const(char)* name);
MIR_reg_t  MIR_reg(MIR_context_t ctx, const(char)* reg_name, MIR_func_t func);
MIR_type_t MIR_reg_type(MIR_context_t ctx, MIR_reg_t reg, MIR_func_t func);
const(char)* MIR_reg_name(MIR_context_t ctx, MIR_reg_t reg, MIR_func_t func);
const(char)* MIR_reg_hard_reg_name(MIR_context_t ctx, MIR_reg_t reg, MIR_func_t func);
